config/webhooks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-glbc
spec:
  rules:
    - host: host.whatever.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glbc-webhooks
                port:
                  number: 8443
